fix(styles): little octocat in wrong height

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -573,7 +573,7 @@ ul#toc,#toc li {
   .icon {
     color: #000;
     font-size: 24px;
-    vertical-align: -5px;
+    vertical-align: -3px;
   }
 
   a {
